--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "homepage": "https://github.com/SarTolik/frontend-project-46#readme",
   "dependencies": {
     "commander": "^9.4.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0"
   }
 }
