--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/SarTolik/frontend-project-46#readme",
   "dependencies": {
-    "commander": "^9.4.0"
+    "commander": "^9.4.0",
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
