--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.23.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.1",
     "jest": "^29.1.2"
   }
 }
