--- a/.github/workflows/fp-46.yml
+++ b/.github/workflows/fp-46.yml
@@ -15,27 +15,19 @@ jobs:
     # The type of machine to run the job on
     runs-on: ubuntu-latest
 
-    strategy:
-      # Node versions list
-      matrix:
-        node-version: [14.x]
-
     steps:
         # Check-out repository under GitHub workspace
         # https://github.com/actions/checkout
-      - uses: actions/checkout@v2
-        # Step's name
-      - name: Use Node.js ${{ matrix.node-version }}
-        # Configures the node version used on GitHub-hosted runners
-        # https://github.com/actions/setup-node
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         # The Node.js version to configure
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 16
           cache: 'npm'
       - run: make install
       - run: make lint
       - run: make test
+
       - name: Test & publish code coverage
       #   # Publish code coverage on Code Climate
       #   # https://github.com/paambaati/codeclimate-action
